k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: travelo
  labels:
    name: travelo
    app.kubernetes.io/part-of: travelo
